fix: code blocks overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -341,6 +341,8 @@ span.accent {
   content: '#';
 }
 
+/* MDX  */
+
 .mdx.prose h1,
 .mdx.prose h2,
 .mdx.prose h3,
@@ -351,6 +353,12 @@ span.accent {
   margin-right: 0.5rem;
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.mdx.prose pre code {
+  overflow: auto;
+  display: block;
+  max-width: 650px;
 }
 
 .hash-anchor-non-mdx {
